# cw-1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  UdfFormat.md  cmake_install.cmake  premake5.lua
Arch/: CMakeLists.txt  Makefile  cmake_install.cmake
Arch/include/Builders/: BaseMeshBuilder.hpp  DefaultIDGenerator.hpp  EmptySceneBuidler.hpp  IDGenerator.hpp  IObjectBuilder.hpp  ISceneBuilder.hpp  NameGenerator.hpp  SceneBuidler.hpp
Arch/include/Builders/CameraBuilders/: DefaultCameraBuilder.hpp
Arch/include/Builders/LightBuilders/: AmbientLightBuilder.hpp  DirectionalLightBuilder.hpp  LightBuilder.hpp
Arch/include/Builders/MeshBuilders/: ConeMeshBuilder.hpp  CylinderMeshBuilder.hpp  SphereMeshBuilder.hpp  TorusMeshBuilder.hpp
Arch/include/Exporters/: IExporter.hpp
Arch/include/Exporters/UdfEXporter/: UdfExporter.hpp
Arch/include/Importers/: IImporter.hpp
Arch/include/Importers/UdfImporter/: UdfImporter.hpp
Arch/include/Loaders/: ILoader.hpp
Arch/include/Loaders/ObjLoader/: ObjFace.hpp  ObjLoader.hpp  ObjObject.hpp  ObjVertex.hpp
Arch/include/Managers/: CameraManager.hpp  IManager.hpp  IManagerFactory.hpp  InfoManager.hpp  LoadManager.hpp  LoadManagerImp.hpp  ObjectManager.hpp  PortManager.hpp  RenderManager.hpp  SceneManager.hpp  SelectionManager.hpp  SettingsManager.hpp
Arch/include/Math/: Color.hpp  Matrix.hpp  Ray.hpp  Rect.hpp  Vector.hpp
Arch/include/Objects/: Camera.hpp  IObject.hpp  Light.hpp  Material.hpp  Mesh.hpp  ObjectAdapter.hpp  ObjectAdapterImp.hpp
Arch/include/Objects/Adapters/: CameraAdapter.hpp  LightAdapter.hpp  MeshAdapter.hpp
Arch/include/RenderSettings/: RenderSettings.hpp
Arch/include/RenderTarget/: RenderTarget.hpp
Arch/include/Scene/: Scene.hpp
Arch/include/Threading/: ThreadPool.hpp
Arch/include/Visitors/: IObjectVisitor.hpp  Transformer.hpp
Arch/src/: Arch.cpp  Arch.hpp
Arch/src/Builders/: BaseMeshBuilder.cpp  DefaultIDGenerator.cpp  EmptySceneBuilder.cpp  NameGenerator.cpp  SceneBuilder.cpp
Arch/src/Builders/CameraBuilders/: DefaultCameraBuilder.cpp
Arch/src/Builders/LightBuilders/: AmbientLightBuilder.cpp  DirectionalLightBuilder.cpp  LightBuilder.cpp
Arch/src/Builders/MeshBuilders/: ConeMeshBuilder.cpp  CylinderMeshBuilder.cpp  SphereMeshBuilder.cpp  TorusMeshBuilder.cpp
Arch/src/Exporters/UdfExporter/: UdfExporter.cpp
Arch/src/Importers/UdfImporter/: UdfImporter.cpp
Arch/src/Loaders/: ILoader.hpp
Arch/src/Loaders/ObjLoader/: ObjFace.cpp  ObjLoader.cpp  ObjLoader.hpp
Arch/src/Managers/: CameraManager.cpp  CameraManager.hpp  IManager.cpp  IManagerFactory.cpp  IManagerFactory.hpp  InfoManager.cpp  LoadManager.cpp  ObjectManager.cpp  PortManager.cpp  RenderManager.cpp  RenderManager.hpp  SceneManager.cpp  SceneManager.hpp  SelectionManager.cpp  SettingsManager.cpp
Arch/src/Math/: Matrix.cpp  Ray.cpp  Rect.cpp  Vector.cpp
Arch/src/Objects/: Camera.cpp  IObject.cpp  Light.cpp  Material.cpp  Mesh.cpp  ObjectAdapter.hpp  ObjectAdapterImp.hpp
Arch/src/Objects/Adapters/: CameraAdapter.cpp  LightAdapter.cpp  MeshAdapter.cpp  MeshAdapter.hpp
Arch/src/RenderSettings/: RenderSettings.cpp
Arch/src/RenderTarget/: RenderTarget.cpp
Arch/src/Scene/: Scene.cpp  Scene.hpp
Arch/src/Threading/: ThreadPool.cpp
Arch/src/Visitors/: IObjectVisitor.hpp  Transformer.cpp
Core/: CMakeLists.txt  Makefile  cmake_install.cmake
Core/include/Core/: Core.hpp  FancyRenderer.hpp  FastRender.hpp  OverlayRender.hpp  RenderParams.hpp
Core/include/Core/Objects/: AmbientLight.hpp  Camera.hpp  DirectionalLight.hpp  Face.hpp  Light.hpp  Material.hpp  MaterialImp.hpp  Mesh.hpp  PointLight.hpp  Vertex.hpp
Core/include/Core/Rasterizers/: CircleRenderer.hpp  LineRenderer.hpp  RectRenderer.hpp  RenderRegion.hpp
Core/include/Core/RenderTarget/: RenderTarget.hpp  ZBuffer.hpp
Core/include/Core/Scene/: Scene.hpp
Core/include/Core/Threading/: ThreadPool.hpp
Core/include/Core/common/: Color.hpp  ColorImp.hpp  Pixel.hpp  StatusCodes.hpp
Core/include/Core/containers/: arr_t.hpp  arr_t_imp.hpp  list_t.hpp  list_t_imp.hpp  vect_t.hpp  vect_t_imp.hpp
Core/include/Core/math/: Mat.hpp  MatImp.hpp  Plane.hpp  PlaneImp.hpp  Ray.hpp  Rect.hpp  RectImp.hpp  Sphere.hpp  SphereImp.hpp  Transform.hpp  Vec.hpp  VecImp.hpp
Core/src/: Core.cpp  Core.hpp  FancyRenderer.cpp  FastRender.cpp  FastRender.hpp  OverlayRenderer.cpp  RenderParams.cpp
Core/src/Objects/: Camera.cpp  Camera.hpp  Face.cpp  Light.cpp  Material.cpp  Mesh.cpp  Mesh.hpp  Vertex.cpp
Core/src/Rasterizers/: CircleRenderer.cpp  LineRenderer.cpp  LineRenderer.hpp  RectRenderer.cpp  RenderRegion.cpp
Core/src/RenderTarget/: RenderTarget.cpp  RenderTarget.hpp  ZBuffer.cpp
Core/src/Scene/: Scene.cpp  Scene.hpp
Core/src/common/: StatusCodes.hpp  ext_math.cpp  ext_math.hpp
Core/src/common/containers/: list_t.hpp  vect_t.hpp
Core/src/common/math/: MatImp.hpp  Plane.hpp  PlaneImp.hpp  Ray.cpp  Ray.hpp  RectImp.hpp  Vec.hpp  VecImp.hpp
Core/src/math/: Ray.cpp
Gui/: CMakeLists.txt  Makefile  cmake_install.cmake
Gui/ads/: CMakeLists.txt  Makefile  cmake_install.cmake
Gui/ads/src/: DockContainerWidget.cpp  DockManager.h  Makefile  cmake_install.cmake
Gui/src/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
Gui/src/Frames/: IFrame.cpp  IFrame.hpp
Gui/src/Frames/HierarchyFrame/: HierarchyFrame.cpp  HierarchyFrame.hpp
Gui/src/Frames/InspectorFrame/: InspectorFrame.cpp  InspectorFrame.hpp
Gui/src/Frames/SettingsFrame/: SettingsFrame.cpp  SettingsFrame.hpp
Gui/src/ItemModels/: ObjectModel.cpp  ObjectModel.hpp
Gui/src/Managers/: QtCameraManager.cpp  QtCameraManager.hpp  QtInfoManager.cpp  QtInfoManager.hpp  QtLoadManager.cpp  QtLoadManager.hpp  QtManagerFactory.cpp  QtManagerFactory.hpp  QtPortManager.cpp  QtPortManager.hpp  QtRenderManager.cpp  QtRenderManager.hpp  QtSceneManager.cpp  QtSceneManager.hpp  QtSelectionManager.cpp  QtSelectionManager.hpp  QtSettingsManager.cpp  QtSettingsManager.hpp
Gui/src/Widgets/: RenderWidget.cpp  RenderWidget.hpp
Tests/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
(+89 files in other folders)
